--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "prettier": "^2.4.1"
   },
   "dependencies": {
+    "@socket.io/admin-ui": "^0.2.0",
     "express": "^4.17.1",
     "pug": "^3.0.2",
     "socket.io": "^4.2.0",
